--- a/client/src/App/pages/game/Game.scss
+++ b/client/src/App/pages/game/Game.scss
@@ -48,14 +48,27 @@
 
   .relevant-text {
     font-size: 18px;
+    position: initial;
+    // transition: position 0.5s !important;
+    // &.opening{
+    //   position: absolute;
+    //   top: 0;
+    // }
     &.winner {
       font-weight: bold;
     }
   }
       
   .game-card {
+    height: 110px;
     margin: 15px;
     cursor: pointer;
+    // transition: height 0.2s ease !important;
+
+    // &.opening{
+    //   height: 1000px;
+    // }
+
     &:hover {
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
