--- a/client/src/App/components/game/Game.scss
+++ b/client/src/App/components/game/Game.scss
@@ -1,96 +1,113 @@
 .dashboard-container {
-    .empty-dashboard {
-      //background: url("../../assets/imgs/volley_empty_list.png") no-repeat center center;
-      height: 100%;
-      //width: 100%;
+  .empty-dashboard {
+    //background: url("../../assets/imgs/volley_empty_list.png") no-repeat center center;
+    height: 100%;
+    //width: 100%;
+  }
+  .text_empty_dashboard {
+    text-align: center;
+    //position: absolute;
+    //top: 65%;
+    font-size: 16px;
+  }
+}
+.update-button {
+  .button-inner {
+    flex-direction: column;
+    .icon {
+      margin-bottom: 5px;
     }
-    .text_empty_dashboard {
+  }
+}
+
+.side-text {
+  color: gray;
+  font-size: 14px;
+}
+
+.live-text {
+  &.live {
+    color: red;
+    font-weight: bold;
+    text-transform: uppercase;
+    &:before {
+      display: inline-block;
+      content: "";
+      height: 10px;
+      width: 10px;
+      margin-right: 5px;
+    }
+
+    &:before {
+      -webkit-border-radius: 50%;
+      border-radius: 50%;
+      background-color: red;
+    }
+  }
+}
+
+.relevant-text {
+  font-size: 18px;
+  position: initial;
+  // transition: position 0.5s !important;
+  // &.opening{
+  //   position: absolute;
+  //   top: 0;
+  // }
+  &.winner {
+    font-weight: bold;
+  }
+}
+
+.game-card {
+  height: 110px;
+  margin: 15px;
+  cursor: pointer;
+  overflow: visible !important;
+  position: relative;
+  // transition: height 0.2s ease !important;
+
+  // &.opening{
+  //   height: 1000px;
+  // }
+
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+  &.live {
+    border: solid 2px red;
+  }
+
+  .owner {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    border-radius: 50%;
+    top: -20px;
+    border: solid 1px gray;
+    left: 45%;
+    background: #fff;
+    z-index: 2;
+    .initial-char {
       text-align: center;
-      //position: absolute;
-      //top: 65%;
-      font-size: 16px;
+      line-height: 50px;
+      font-size: 25px;
     }
   }
-  .update-button {
-    .button-inner {
-      flex-direction: column;
-      .icon {
-        margin-bottom: 5px;
+
+  .card-content {
+    position: relative;
+    .game-content.edit {
+      opacity: 0.5;
+    }
+    .edit-game-checkbox {
+      display: none;
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      &.edit {
+        display: block;
       }
     }
   }
-
-  .side-text {
-    color: gray;
-    font-size: 14px;
-  }
-
-  .live-text {
-    &.live {
-      color: red;
-      font-weight: bold;
-      text-transform: uppercase;
-      &:before {
-        display: inline-block;
-        content: "";
-        height: 10px;
-        width: 10px;
-        margin-right: 5px;
-      }
-
-      &:before {
-        -webkit-border-radius: 50%;
-        border-radius: 50%;
-        background-color: red;
-      }
-    }
-  }
-
-  .relevant-text {
-    font-size: 18px;
-    position: initial;
-    // transition: position 0.5s !important;
-    // &.opening{
-    //   position: absolute;
-    //   top: 0;
-    // }
-    &.winner {
-      font-weight: bold;
-    }
-  }
-      
-  .game-card {
-    height: 110px;
-    margin: 15px;
-    cursor: pointer;
-    // transition: height 0.2s ease !important;
-
-    // &.opening{
-    //   height: 1000px;
-    // }
-
-    &:hover {
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-        0 10px 10px rgba(0, 0, 0, 0.22);
-    }
-    &.live {
-      border: solid 2px red;
-    }
-
-    .card-content{
-      position: relative;
-      .game-content.edit{
-        opacity: 0.5;
-      }
-      .edit-game-checkbox{
-        display: none;
-        position: absolute;
-        bottom: 10px;
-        right: 10px;
-        &.edit{
-          display: block;
-        }
-      }
-    }
-    
-  }
+}
