--- a/client/src/App/pages/profile/Profile.scss
+++ b/client/src/App/pages/profile/Profile.scss
@@ -8,6 +8,9 @@
     margin: 20px auto;
     border-radius: 50%;
     border: solid 2px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
 
   .edit-fab {
