upload image progress dialog

--- a/client/src/App/components/bottom-appbar/BottomAppBar.scss
+++ b/client/src/App/components/bottom-appbar/BottomAppBar.scss
@@ -18,3 +18,12 @@
     color: #fff;
   }
 }
+
+.user-picture{
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
