--- a/client/src/App/pages/chat/Chat.scss
+++ b/client/src/App/pages/chat/Chat.scss
@@ -1,4 +1,11 @@
-.user-image{
+.chat-page {
+  height: calc(100vh - 160px);
+  .messages-container {
+    height: calc(100vh - 210px);
+    overflow: auto;
+  }
+
+  .user-image {
     height: 40px;
     width: 40px;
     background-repeat: no-repeat;
@@ -7,71 +14,94 @@
     border-radius: 50%;
     border: solid 1px;
 
-    &.same{
-        visibility: hidden;
-        height: 1px;
+    &.same {
+      visibility: hidden;
+      height: 1px;
     }
-}
+  }
 
-.clear{
+  .clear {
     clear: both;
-}
-.message {
+  }
+
+  .new-date{
+    width: fit-content;
+    margin: 30px auto 20px auto;
+    border: solid 1px;
+    border-radius: 25px;
+    padding: 5px 10px;
+    font-weight: bold;
+  }
+
+  .message {
     margin: 10px 0;
-    .message-info{
-        margin: 0 15px;
-        max-width: 70%;
-        .date{
-            &.same{
-                display: none;
-            }
+    .message-info {
+      margin: 0 15px;
+      max-width: 70%;
+      .date {
+        &.same {
+          display: none;
         }
-        .text {
-            border: solid 1px;
-            padding: 10px;
-            position: relative;
-            &.not-me{
-                background-color: black;
-                color: white;
-                border-radius: 0px 7px 7px 7px;
-            }
-            &.me{
-                border-radius: 7px 0px 7px 7px;
-            }
-            .triangle {
-                position: absolute;
-                &.me{
-                    top: -1px;
-                    right: -10px;
-                    border-bottom: 10px solid transparent;
-                    border-left: 10px solid black;
-                }
-                &.not-me{
-                    top: -1px;
-                    left: -10px;
-                    border-bottom: 10px solid transparent;
-                    border-right: 10px solid white;
-                }
-                &.inside {
-                    position: absolute;
-                    &.me{    
-                        top: 0px;
-                        right: -8px;
-                        border-bottom: 10px solid transparent;
-                        border-left: 10px solid white;
-                    }
-                    &.not-me{
-                        top: 0px;
-                        left: -8px;
-                        border-bottom: 10px solid transparent;
-                        border-right: 10px solid black;
-                    }
-                }
-                &.hidden{
-                    display: none;
-                }
-            }
+      }
+      .text {
+        border: solid 1px;
+        padding: 10px;
+        position: relative;
+        &.not-me {
+          background-color: black;
+          color: white;
+          border-radius: 0px 7px 7px 7px;
         }
+        &.me {
+          border-radius: 7px 0px 7px 7px;
+        }
+        .triangle {
+          position: absolute;
+          &.me {
+            top: -1px;
+            right: -10px;
+            border-bottom: 10px solid transparent;
+            border-left: 10px solid black;
+          }
+          &.not-me {
+            top: -1px;
+            left: -10px;
+            border-bottom: 10px solid transparent;
+            border-right: 10px solid white;
+          }
+          &.inside {
+            position: absolute;
+            &.me {
+              top: 0px;
+              right: -8px;
+              border-bottom: 10px solid transparent;
+              border-left: 10px solid white;
+            }
+            &.not-me {
+              top: 0px;
+              left: -8px;
+              border-bottom: 10px solid transparent;
+              border-right: 10px solid black;
+            }
+          }
+          &.hidden {
+            display: none;
+          }
+        }
+      }
     }
-    
+  }
+
+  .textarea-container {
+    position: absolute !important;
+    bottom: 0;
+    width: 100%;
+    .textarea {
+      width: calc(100% - 120px);
+    }
+    .send {
+      margin-left: 15px;
+      margin-top: 15px;
+    }
+  }
 }
