--- a/client/src/App/components/team-card/TeamCard.scss
+++ b/client/src/App/components/team-card/TeamCard.scss
@@ -19,6 +19,9 @@
         height: 50px;
         text-align: center;
         line-height: 50px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
       }
     }
   }
