edit formation dialog

--- a/client/src/App/pages/edit-team/EditTeam.scss
+++ b/client/src/App/pages/edit-team/EditTeam.scss
@@ -22,8 +22,10 @@
       right: -2vw;
     }
   }
-  
 
+  .expansion-panel {
+    background: #bdbdbd;
+  }
   .player-card {
     margin: 15px 0;
     width: 100%;
@@ -74,51 +76,59 @@
     }
   }
 
-  .formation-card{
-    .court-container{
+  .formation-card {
+    .court-container {
       position: relative;
-      width: 76vw;
+      width: 100%;
       height: 36vw;
-      .avatar{
+      border: solid 1px;
+      .court-line {
+        position: absolute;
+        top: 45%;
+        border-top: solid 1px;
+        width: 100%;
+      }
+      .avatar {
         position: absolute;
       }
-      .avatar-0{
-        top: 0;
+      .avatar-4 {
+        top: 10%;
         left: 10%;
       }
-      .avatar-1{
-        top: 0;
+      .avatar-3 {
+        top: 10%;
         left: 45%;
       }
-      .avatar-2{
-        top: 0;
+      .avatar-2 {
+        top: 10%;
         left: 78%;
       }
-      .avatar-3{
-        top: 40%;
+      .avatar-5 {
+        top: 60%;
         left: 10%;
       }
-      .avatar-4{
-        top: 40%;
+      .avatar-6 {
+        top: 60%;
         left: 45%;
       }
-      .avatar-5{
-        top: 40%;
+      .avatar-1 {
+        top: 60%;
         left: 78%;
       }
     }
     .chip {
-      width: 145px;
+      width: 185px;
       justify-content: end;
       margin: 5px;
-      span{
+      max-width: 46%;
+      span {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         max-width: 110px;
         display: inline;
       }
-  }
+    }
   }
 }
 
