--- a/client/src/App/pages/match/Match.scss
+++ b/client/src/App/pages/match/Match.scss
@@ -38,6 +38,11 @@
 }
 .set-list {
   font-size: 18px;
+
+  .audience-button {
+    margin: 0 auto;
+    display: block;
+  }
   .set-title {
     text-align: center;
   }
