edit formation during match

--- a/client/src/App/pages/match-formation/MatchFormation.scss
+++ b/client/src/App/pages/match-formation/MatchFormation.scss
@@ -1,7 +1,20 @@
+.creation-info {
+  margin: 10px auto;
+  .chip {
+    margin-left: 20px;
+  }
+}
 
-.creation-info{
-    margin: 10px auto;
-    .chip {
-        margin-left: 20px;
+.edit-buttons {
+  display: flex;
+  margin-bottom: 10px;
+  button {
+    flex-grow: 1;
+    &:first-child {
+      margin-right: 5px;
     }
+    &:last-child {
+      margin-left: 5px;
+    }
+  }
 }
