--- a/client/src/App/pages/dashboard/Dashboard.scss
+++ b/client/src/App/pages/dashboard/Dashboard.scss
@@ -1,8 +1,8 @@
 .empty_games_container {
   width: 100vw !important;
   margin-top: 15vh;
-  
-  .empty-games-image{
+
+  .empty-games-image {
     height: 50vw;
     width: 50vw;
     background-repeat: no-repeat;
@@ -15,6 +15,13 @@
     text-align: center;
     font-size: 20px;
   }
+}
+.titles {
+  padding: 15px 10px;
+  font-weight: bold;
+  color: white;
+  background-color: #212121;
+  margin-top: 30px;
 }
 
 .ask-login {
