--- a/client/src/App/pages/edit-team/EditTeam.scss
+++ b/client/src/App/pages/edit-team/EditTeam.scss
@@ -119,3 +119,10 @@
     margin: 0 15px;
   }
 }
+
+.no-contributor-message{
+  background-color: red;
+  color: #fff;
+  padding: 10px;
+  font-weight: bold;
+}
