--- a/client/src/App/pages/edit-team/EditTeam.scss
+++ b/client/src/App/pages/edit-team/EditTeam.scss
@@ -126,3 +126,15 @@
   padding: 10px;
   font-weight: bold;
 }
+
+.ask-contribution{
+  display: block !important;
+  margin: 20px auto !important;
+}
+
+.asking-message{
+  background-color: orange;
+  color: #fff;
+  padding: 10px;
+  font-weight: bold;
+}
