--- a/client/src/App/components/team-card/TeamCard.scss
+++ b/client/src/App/components/team-card/TeamCard.scss
@@ -4,6 +4,9 @@
   cursor: pointer;
   overflow: visible !important;
   position: relative;
+  .team-content{
+    padding: 16px;
+  }
   .logo-container {
     display: table;
     height: 57px;
