--- a/client/src/App/components/game/Game.scss
+++ b/client/src/App/components/game/Game.scss
@@ -94,7 +94,9 @@
       font-size: 25px;
     }
   }
-
+  .game-content {
+    padding: 16px;
+  }
   .card-content {
     position: relative;
     .game-content.edit {
