--- a/client/src/App/pages/my-teams/MyTeams.scss
+++ b/client/src/App/pages/my-teams/MyTeams.scss
@@ -1,3 +1,7 @@
-.my-teams{
-    // padding: 20px;
+.my-teams {
+  .progress {
+    margin: 0 auto;
+    margin-top: 40vh;
+    display: block !important;
+  }
 }
