--- a/client/src/App/components/court-and-chip/CourtAndChip.scss
+++ b/client/src/App/components/court-and-chip/CourtAndChip.scss
@@ -1,5 +1,7 @@
-.court {
-  // position: relative;
+.court {    
+  max-height: 400px;
+  max-width: 600px;
+  margin: 0 auto;
   width: 100%;
   height: 70vw;
   background: #bdbdbd;
