--- a/client/src/App/pages/dashboard/Dashboard.scss
+++ b/client/src/App/pages/dashboard/Dashboard.scss
@@ -1,6 +1,11 @@
 .empty_games_container {
   width: 100vw !important;
   margin-top: 15vh;
+  
+  .flex-container{
+    flex-direction: column;
+    align-items: center;
+  }
 
   .empty-games-image {
     height: 50vw;
@@ -8,6 +13,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    max-width: 300px;
+    max-height: 300px;
   }
 
   .empty-games-description {
@@ -37,4 +44,10 @@
   .to-login {
     font-size: 30px;
   }
+}
+
+.progress{
+    margin: 0 auto;
+    margin-top: 40vh;
+    display: block !important;
 }
