improvement and chat disabled for anonymous

--- a/client/src/App/pages/match/Match.scss
+++ b/client/src/App/pages/match/Match.scss
@@ -1,3 +1,8 @@
+.progress-main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
 .tab-container {
   margin-top: 105px;
   max-height: calc(100vh - 105px);
