--- a/client/src/App/pages/chat/Chat.scss
+++ b/client/src/App/pages/chat/Chat.scss
@@ -5,6 +5,30 @@
     overflow: auto;
   }
 
+  .chat-disabled {
+    display: flex;
+    height: 100%;
+    align-items: center;
+
+    .chat-disabled-container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+
+      .chat-disabled-message {
+        text-align: center;
+        width: 100%;
+        font-size: 24px;
+      }
+      .chat-disabled-button {
+        width: fit-content;
+        display: block;
+        margin: 20px auto;
+        font-size: 24px;
+      }
+    }
+  }
+
   .user-image {
     height: 40px;
     width: 40px;
@@ -24,7 +48,7 @@
     clear: both;
   }
 
-  .new-date{
+  .new-date {
     width: fit-content;
     margin: 30px auto 20px auto;
     border: solid 1px;
